--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                 <div class="contorno_fotos">
 
-                    <img width="100px " height="100px " class="aro17 " type="button" class="image-button" onclick="openModal ('https://github.com/vitor-alves2024/HIRO/blob/master/roda_marcaTal_aro_furacao_cor.jpg')" src="https://github.com/vitor-alves2024/HIRO/blob/master/roda_marcaTal_aro_furacao_cor.jpg" alt="roda nova ">
+                    <img width="100px " height="100px " class="aro17" src="https://github.com/vitor-alves2024/HIRO/blob/master/roda_marcaTal_aro_furacao_cor.jpg" alt="roda nova " type="button" class="image-button" onclick="openModal ('https://github.com/vitor-alves2024/HIRO/blob/master/roda_marcaTal_aro_furacao_cor.jpg')" >
 
 
                     <div id="legenda_rodas" class="aro17 fura5 legendas">
