--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
 
                 <div class="contorno_fotos">
 
-                    <img width="100px " height="100px " class="aro17" src="https://github.com/vitor-alves2024/HIRO/blob/master/roda_marcaTal_aro_furacao_cor.jpg" alt="roda nova " type="button" class="image-button" onclick="openModal ('https://github.com/vitor-alves2024/HIRO/blob/master/roda_marcaTal_aro_furacao_cor.jpg')" >
-
-
+                     <img width="120px " height="120px " class="aro17" src="https://github.com/vitor-alves2024/HIRO/blob/master/roda_marcaTal_aro_furacao_cor.jpg?raw=true" type="button" class="image-button" onclick="openModal ('https://github.com/vitor-alves2024/HIRO/blob/master/roda_marcaTal_aro_furacao_cor.jpg?raw=true')"
+                        alt="roda nova ">
                     <div id="legenda_rodas" class="aro17 fura5 legendas">
                         <ul>
                             <li>legenda do terceiro</li>
