--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <fieldset>
                 <div class="aros">
                     <h3>AROS</h3>
-                    <select onchange=" atualizarVisualizacao()" class="select_aros" name="select_aros" id="select_aros" action="#">
-                        <option value="">selecione o aro</option>
+                    <select onchange="atualizarVisualizacao()" class="select_aros" name="select_aros" id="select_aros" action="#" <option value="">selecione o aro</option>
+                      <option value ="" >selecione o aro</option>
                         <option value="all" id="mostrar_tudo" action="#">mostrar todos</option>
                         <option value="aro15" id="aro15" action="#">15</option>
                         <option value="aro16" id="aro16" action="#">16</option>
@@ -38,12 +38,13 @@
                 <div class="furacao">
                     <label for="furacao">
                         <h3>FURAÇÃO</h3>
-                        <select name="select-furacao" id="furacao" action="#">
+                        <select onchange="atualizarVisualizacao()" name="select-furacao" id="furacao" action="#">
+                            <option value ="" >selecione  furação</option>
                             <option value="all" id="mostrar_tudo" action="#">mostar todas</option>
-                            <option value="3" id="3" action="#">3</option>
-                            <option value="4" id="4" action="#">4</option>
-                            <option value="5" id="5" action="#">5</option>
-                            <option value="6" id="6" action="#">6</option>
+                            <option value="fura3" id="fura3" action="#">3</option>
+                            <option value="fura4" id="fura4" action="#">4</option>
+                            <option value="fura5" id="fura5" action="#">5</option>
+                            <option value="fura6" id="fura6" action="#">6</option>
                            
                         </select>
                     </label>
@@ -53,7 +54,7 @@
             <div class="fotos">
                 <div class="contorno_fotos">
 
-                    <img width="120px" height="120px" class="aro15" type="button" class="image-button" onclick="openModal('//http2.mlstatic.com/D_NQ_NP_2X_618628-MLU76093290709_042024-F.webp')" src="https://http2.mlstatic.com/D_NQ_NP_2X_618628-MLU76093290709_042024-F.webp"
+                    <img width="120px" height="120px" class="aro15 fura3" type="button" class="image-button" onclick="openModal('//http2.mlstatic.com/D_NQ_NP_2X_618628-MLU76093290709_042024-F.webp')" src="https://http2.mlstatic.com/D_NQ_NP_2X_618628-MLU76093290709_042024-F.webp"
                         alt="Germany Corcel Del Rey Pampa">
 
 
@@ -71,7 +72,7 @@
 
                 <div class="contorno_fotos">
 
-                    <img width="120px" height="120px" class="aro16" src="https://http2.mlstatic.com/D_NQ_NP_2X_618628-MLU76093290709_042024-F.webp" type="button" class="image-button" onclick="openModal('//http2.mlstatic.com/D_NQ_NP_2X_618628-MLU76093290709_042024-F.webp')"
+                    <img width="120px" height="120px" class="aro16 fura4" src="https://http2.mlstatic.com/D_NQ_NP_2X_618628-MLU76093290709_042024-F.webp" type="button" class="image-button" onclick="openModal('//http2.mlstatic.com/D_NQ_NP_2X_618628-MLU76093290709_042024-F.webp')"
                         alt="Germany Corcel Del Rey Pampa">
 
 
@@ -88,8 +89,10 @@
 
                 <div class="contorno_fotos">
 
-                     <img width="120px " height="120px " class="aro17" src="https://github.com/vitor-alves2024/HIRO/blob/master/roda_marcaTal_aro_furacao_cor.jpg?raw=true" type="button" class="image-button" onclick="openModal ('https://github.com/vitor-alves2024/HIRO/blob/master/roda_marcaTal_aro_furacao_cor.jpg?raw=true')"
+                    <img width="120px " height="120px " class="aro17 fura5" src="https://github.com/vitor-alves2024/HIRO/blob/master/roda_marcaTal_aro_furacao_cor.jpg?raw=true" type="button" class="image-button" onclick="openModal ('https://github.com/vitor-alves2024/HIRO/blob/master/roda_marcaTal_aro_furacao_cor.jpg?raw=true')"
                         alt="roda nova ">
+
+
                     <div id="legenda_rodas" class="aro17 fura5 legendas">
                         <ul>
                             <li>legenda do terceiro</li>
@@ -103,7 +106,7 @@
 
                 <div class="contorno_fotos">
 
-                    <img width="120px" height="120px" class="aro16" src="https://http2.mlstatic.com/D_NQ_NP_2X_618628-MLU76093290709_042024-F.webp" type="button" class="image-button" onclick="openModal('//http2.mlstatic.com/D_NQ_NP_2X_618628-MLU76093290709_042024-F.webp')"
+                    <img width="120px" height="120px" class="aro16 fura6" src="https://http2.mlstatic.com/D_NQ_NP_2X_618628-MLU76093290709_042024-F.webp" type="button" class="image-button" onclick="openModal('//http2.mlstatic.com/D_NQ_NP_2X_618628-MLU76093290709_042024-F.webp')"
                         alt="Germany Corcel Del Rey Pampa">
 
 
